[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/TombCanvas.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Backend/Backend.tscn" type="PackedScene" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 834.0
margin_bottom = 880.0

[node name="MenuTitle" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.1
margin_left = 300.0
margin_top = -10.0
margin_right = -300.0
margin_bottom = -50.0
text = "BOOBY TRAPS"
align = 1
valign = 1

[node name="TombCanvas" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ResultMsg" type="Panel" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 182.0
margin_top = 150.0
margin_right = -182.0
margin_bottom = -510.0

[node name="Label" type="Label" parent="Panel/ResultMsg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -50.0
align = 1
valign = 1

[node name="Button" type="Button" parent="Panel/ResultMsg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 220.0
margin_top = 170.0
margin_right = -199.0
margin_bottom = -10.0
text = "OK"

[node name="StartButton" type="Button" parent="."]
margin_left = 854.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 60.0
text = "START"

[node name="QuitButton" type="Button" parent="."]
margin_left = 854.0
margin_top = 840.0
margin_right = 1004.0
margin_bottom = 880.0
text = "QUIT"

[node name="InputSelection" type="OptionButton" parent="."]
margin_left = 854.0
margin_top = 100.0
margin_right = 1004.0
margin_bottom = 140.0

[node name="Backend" parent="." instance=ExtResource( 3 )]

